Fix header overlap on scroll

--- a/src/components/Navigation.module.scss
+++ b/src/components/Navigation.module.scss
@@ -5,6 +5,7 @@
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 999;
 
   &_Navigation {
     display: flex;
